[tool.poetry]
name = "sgraph-mod"
version = "0.0.0"
description = "sgraph-mod"
authors = ["Konstantin Klepikov <oformleno@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10,<4.0"
isort = "^6.0.0"
networkx = "^3.4.2"
nx-cugraph-cu12 = "^25.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
flake8-broken-line = "^1.0.0"
flake8-return = "^1.2.0"
flake8-isort = "^6.1.1"
flake8-quotes = "^3.3.2"
flake8-bugbear = "^23.9.16"
flake8-pyproject = "^1.2.3"
pep8-naming = "^0.13.3"
mypy = "^1.13.0"
ruff = "^0.7.2"
radon = "^6.0.1"
# blue = "^0.9.1" use pipx
types-setuptools = "^69.5.0.20240513"



[[tool.poetry.source]]
name = "nx-cugraph-cu12"
url = "https://pypi.nvidia.com"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.blue]
line-length = 88
preview = true


[tool.isort]
profile = "black"


[tool.flake8]
max-line-length = 88
max-complexity = 10


[tool.ruff]
line-length = 88


[tool.ruff.format]
quote-style = "single"


[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
mypy_path = ["src", "tests"]


[tool.pytest.ini_options]
pythonpath = "src"
python_files = "test_*.py"
testpaths = "tests"
norecursedirs = ["venv*", ".venv"]
disable_test_id_escaping_and_forfeit_all_rights_to_community_support = true
addopts = "-v -x -s -p no:warnings"
asyncio_mode = "auto"
